After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698910 - ChamplainPoint not correctly translated
ChamplainPoint not correctly translated
Status: RESOLVED FIXED
Product: libchamplain
Classification: Core
Component: markers
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libchamplain-maint
libchamplain-maint
Depends on:
Blocks:
 
 
Reported: 2013-04-26 01:09 UTC by Zeeshan Ali
Modified: 2013-05-02 19:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot of the issue (965.14 KB, image/png)
2013-04-26 01:17 UTC, Zeeshan Ali
  Details
champlain-point: Adjust translation on size change (966 bytes, patch)
2013-04-26 01:31 UTC, Zeeshan Ali
committed Details | Review

Description Zeeshan Ali 2013-04-26 01:09:51 UTC
I was getting the ChamplainPoint displayed at the wrong coordinates in Maps. I thought its some missing translation of actor in Maps but on investigation it turns out to be a regression libchamplain. A git bisect session revealed that issue was caused by 9dd0899 - 'Get rid of set_anchor_point()'.
Comment 1 Zeeshan Ali 2013-04-26 01:17:27 UTC
Created attachment 242491 [details]
Screenshot of the issue
Comment 2 Zeeshan Ali 2013-04-26 01:31:31 UTC
Created attachment 242492 [details] [review]
champlain-point: Adjust translation on size change
Comment 3 Zeeshan Ali 2013-04-26 01:32:00 UTC
(In reply to comment #2)
> Created an attachment (id=242492) [details] [review]
> champlain-point: Adjust translation on size change

This patch fixes the issue.
Comment 4 Jiri Techet 2013-05-02 19:52:26 UTC
Review of attachment 242492 [details] [review]:

Applied, thanks.