champlain-point: Adjust translation on size change

https://bugzilla.gnome.org/show_bug.cgi?id=698910